# excel_reader

./: .gitignore  Makefile  README.md  pyproject.toml
excel_reader/: __init__.py  core.py
test_files/: school.json  school.xlsx  students.csv  students.json
tests/: test_core.py
