# pyproject.toml
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "excel_reader"
version = "0.1.0"
description = "A simple excel_reader library."
authors = ["Manoj"]
packages = [{ include = "excel_reader" }]
readme = "README.md"
keywords = ["excel_reader", "library"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
loguru = "*"
pandas = "^2.3.1"
openpyxl = "^3.1.5"
dataclasses-json = "^0.6.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
