# pyproject.toml
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "excel_reader"
version = "0.1.0"
description = "A simple excel_reader library."
authors = ["Manoj"]
packages = [{ include = "excel_reader" }]
readme = "README.md"
keywords = ["excel_reader", "library"]

[tool.poetry.dependencies]
python = ">=3.7"
loguru = "*"
openpyxl = "*"
dataclasses-json = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
